syntax = "proto3";

package go.micro.srv.user;

service User {
	rpc MicroGetUser(Request) returns (Response) {};
	rpc UpdateUserName(UpdateReq)returns(UpdateResp){};
	rpc UploadAvatar(UploadReq)returns(UploadResp){};
	rpc AuthUpdate(AuthReq)returns(AuthResp){};
}

message AuthReq{
	string id_card = 1;
	string real_name = 2;
	string userName = 3;
}

message AuthResp{
	string errno = 1;
	string errmsg = 2;
}


message UploadData{
	string avatar_url = 1;
}

message UploadResp{
	string errno = 1;
	string errmsg = 2;
	UploadData data = 3;
}

message UploadReq{
	bytes avatar = 1;
	string userName = 2;
	string fileExt = 3;
}


message UpdateReq{
	string newName = 1;
	string oldName = 2;
}

message UpdateResp{
	string errno = 1;
	string errmsg = 2;
	NameData data = 3;
}

message NameData{
	string name = 1;
}

message Request {
	string name = 1;
}

message Response {
	string errno = 1;
	string errmsg = 2;
	UserInfo data = 3;
}

message UserInfo{
	int32 user_id = 1;
	string name = 2;
	string mobile = 3;
	string real_name = 4;
	string id_card = 5;
	string avatar_url = 6;
}
