syntax = "proto3";

package go.micro.srv.getImg;

service GetImg {
	rpc MicroGetImg(Request) returns (Response) {}
}



message Request {
	string uuid = 1;
}

message Response {
	string errno = 1;
	string errmsg = 2;
	//二进制的图片类型  byte
	bytes data = 3;
}
